--- a/templates/base-admin.html.twig
+++ b/templates/base-admin.html.twig
@@ -168,7 +168,7 @@
                                     <li class="nav-item">
                                         <a href="{{ path('languages_index') }}" class="nav-link">
                                             <i class="far fa-circle nav-icon"></i>
-                                            <p>Langues des articles</p>
+                                            <p>Langues des publications</p>
                                         </a>
                                     </li>
 
