--- a/templates/messages/index.html.twig
+++ b/templates/messages/index.html.twig
@@ -47,7 +47,7 @@
 							{{ knp_pagination_sortable(messages, 'Adresse email', 'email') }}
 						</th>
 						<th>
-							{{ knp_pagination_sortable(messages, 'Nom', 'name') }}
+							{{ knp_pagination_sortable(messages, 'Expéditeur', 'name') }}
 						</th>
 						<th>
 							{{ knp_pagination_sortable(messages, 'Objet', 'subject') }}
