--- a/templates/messages/show.html.twig
+++ b/templates/messages/show.html.twig
@@ -41,7 +41,7 @@
 			<table class="table">
 				<tbody>
 					<tr>
-						<th>Nom</th>
+						<th>Expéditeur</th>
 						<td>{{ message.name }}</td>
 					</tr>
 					<tr>
