--- a/templates/attributes/_delete_form.html.twig
+++ b/templates/attributes/_delete_form.html.twig
@@ -1,5 +1,36 @@
-<form method="post" action="{{ path('attributes_delete', {'id': attribute.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+{# <form method="post" action="{{ path('attributes_delete', {'id': attribute.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ attribute.id) }}">
     <button class="btn">Supprimer</button>
-</form>
+</form> #}
+
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteAttribute{{ attribute.id }}ModalCenter">
+    Supprimer
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="deleteAttribute{{ attribute.id }}ModalCenter" tabindex="-1" role="dialog" aria-labelledby="deleteAttribute{{ attribute.id }}ModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="deleteAttribute{{ attribute.id }}ModalLongTitle">Suppression de l'attribut <span class="font-italic">"{{ attribute.name }}->{{ attribute.value }}"</span></h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                La suppression de l'attribut <span class="font-italic">"{{ attribute.name }}->{{ attribute.value }}"</span> sera irréversible.
+                Voulez-vous vraiment supprimer cet attribut ?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
+                <form method="post" action="{{ path('attributes_delete', {'id': attribute.id}) }}">
+                    <input type="hidden" name="_method" value="DELETE">
+                    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ attribute.id) }}">
+                    <button class="btn btn-danger">Supprimer</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
