--- a/templates/attributes/new.html.twig
+++ b/templates/attributes/new.html.twig
@@ -38,3 +38,7 @@
 		</div>
 	</div>
 {% endblock %}
+{% block javascripts %}
+<script src="{{ asset('js/easyEditAttributes.js') }}"></script>
+{% endblock %}
+
