--- a/templates/products/_delete_form.html.twig
+++ b/templates/products/_delete_form.html.twig
@@ -1,5 +1,66 @@
-<form method="post" action="{{ path('products_delete', {'id': product.id}) }}" onsubmit="return confirm('La suppression de ce produit entraînera la suppression des images qui lui sont associés. Voulez-vous vraiment supprimer ce produit de la base de donnée ?');">
+{# <form method="post" action="{{ path('products_delete', {'id': product.id}) }}" onsubmit="return confirm('La suppression de ce produit entraînera la suppression des images qui lui sont associés. Voulez-vous vraiment supprimer ce produit de la base de donnée ?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ product.id) }}">
     <button class="btn">Supprimer le produit</button>
-</form>
+</form> #}
+
+<!-- Button trigger modal -->
+<button class="btn btn-danger" data-toggle="modal" data-target="#deleteProduct{{ product.id }}ModalCenter">
+  Supprimer
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="deleteProduct{{ product.id }}ModalCenter" tabindex="-1" role="dialog" aria-labelledby="deleteProduct{{ product.id }}ModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="deleteProduct{{ product.id }}ModalLongTitle">Suppression du produit <span class="font-italic">{{ product.title }}</span></h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                La suppression du produit <span class="font-italic">{{ product.title }}</span> entraînera la suppression des images qui lui sont associés et sera irréversible.
+                Voulez-vous vraiment supprimer ce produit ?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-danger" data-dismiss="modal" data-toggle="modal" data-target="#deleteRelated{{ product.id }}ModalCenter">
+                    Oui
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="deleteRelated{{ product.id }}ModalCenter" tabindex="-1" role="dialog" aria-labelledby="deleteRelated{{ product.id }}ModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="deleteRelated{{ product.id }}ModalLongTitle">Voulez-vous également supprimer les messages et les avis clients associés à ce produit ?</h5>
+                <button type="button" class="close btn-success" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-footer">
+                <div class="row">
+                    <form method="post" action="{{ path('products_delete', {'id': product.id}) }}" class="col-6">
+                        <input type="hidden" name="delete_related" value=false>
+                        <input type="hidden" name="_method" value="DELETE">
+                        <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ product.id) }}">
+                        <button class="btn btn-warning">Supprimer le produit et ses images</button>
+                    </form>
+                    <form method="post" action="{{ path('products_delete', {'id': product.id}) }}" class="col-6">
+                        <input type="hidden" name="delete_related" value=true>
+                        <input type="hidden" name="_method" value="DELETE">
+                        <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ product.id) }}">
+                        <button class="btn btn-danger">Supprimer les messages et commentaires aussi</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
