--- a/templates/attributes/edit.html.twig
+++ b/templates/attributes/edit.html.twig
@@ -37,8 +37,9 @@
 			<a href="{{ path('attributes_index') }}">Retour à la liste</a>
 
 			{{ include('attributes/_delete_form.html.twig') }}
-
-
 		</div>
 	</div>
+{% endblock %}
+{% block javascripts %}
+<script src="{{ asset('js/easyEditAttributes.js') }}"></script>
 {% endblock %}
