cosmétique sur le back office; Ajout de barres de recherche pour la plupart des entités (fonctionnalités implémentées via requêtes DQL);

--- a/templates/attributes/_form.html.twig
+++ b/templates/attributes/_form.html.twig
@@ -4,5 +4,5 @@
         {{ form_row(form.name) }}
         {{ form_row(form.value) }}	
     </div>
-    <button class="btn">{{ button_label|default('Valider') }}</button>
+    <button class="btn btn-success my-5">{{ button_label|default('Valider') }}</button>
 {{ form_end(form) }}
