--- a/templates/attributes/edit.html.twig
+++ b/templates/attributes/edit.html.twig
@@ -34,7 +34,7 @@
 
 			{{ include('attributes/_form.html.twig', {'button_label': 'Modifier'}) }}
 
-			<a href="{{ path('attributes_index') }}">Retour à la liste</a>
+			<a href="{{ path('attributes_index') }}" class="btn btn-primary" >Retour à la liste</a>
 
 			{{ include('attributes/_delete_form.html.twig') }}
 		</div>
