--- a/templates/attributes/new.html.twig
+++ b/templates/attributes/new.html.twig
@@ -33,7 +33,7 @@
 		<div class="container-fluid">
 			{{ include('attributes/_form.html.twig') }}
 
-			<a href="{{ path('attributes_index') }}">Retour à la liste</a>
+			<a href="{{ path('attributes_index') }}" class="btn btn-primary" >Retour à la liste</a>
 
 		</div>
 	</div>
