--- a/templates/categories/_form.html.twig
+++ b/templates/categories/_form.html.twig
@@ -28,6 +28,6 @@
 
 </fieldset>
 
-    <button class="btn">{{ button_label|default('Valider') }}</button>
+    <button class="btn btn-success my-5">{{ button_label|default('Valider') }}</button>
 
 {{ form_end(form) }}
