--- a/templates/categories/new.html.twig
+++ b/templates/categories/new.html.twig
@@ -34,7 +34,7 @@
 
 			{{ include('categories/_form.html.twig') }}
 
-			<a href="{{ path('categories_index') }}">Retour à la liste</a>
+			<a href="{{ path('categories_index') }}" class="btn btn-primary" >Retour à la liste</a>
 
 		</div>
 	</div>
