--- a/templates/comments/edit.html.twig
+++ b/templates/comments/edit.html.twig
@@ -34,7 +34,7 @@
 
 			{{ include('comments/_form.html.twig', {'button_label': 'Modifier'}) }}
 
-			<a href="{{ path('comments_index') }}">Retour à la liste</a>
+			<a href="{{ path('comments_index') }}" class="btn btn-primary" >Retour à la liste</a>
 
 			{{ include('comments/_delete_form.html.twig') }}
 		</div>
