--- a/templates/languages/new.html.twig
+++ b/templates/languages/new.html.twig
@@ -34,7 +34,7 @@
 
 			{{ include('languages/_form.html.twig') }}
 
-			<a href="{{ path('languages_index') }}">Retour à la liste</a>
+			<a href="{{ path('languages_index') }}" class="btn btn-primary" >Retour à la liste</a>
 		</div>
 	</div>
 {% endblock %}
