--- a/templates/pages/edit.html.twig
+++ b/templates/pages/edit.html.twig
@@ -34,7 +34,7 @@
 
 			{{ include('pages/_form.html.twig', {'button_label': 'Modifier'}) }}
 
-			<a href="{{ path('pages_index') }}">Retour à la liste</a>
+			<a href="{{ path('pages_index') }}" class="btn btn-primary" >Retour à la liste</a>
 
 			{{ include('pages/_delete_form.html.twig') }}
 		</div>
