--- a/templates/attribute_groups/edit.html.twig
+++ b/templates/attribute_groups/edit.html.twig
@@ -35,7 +35,7 @@
 
 			{{ include('attribute_groups/_form.html.twig', {'button_label': 'Modifier'}) }}
 
-			<a href="{{ path('attribute_groups_index') }}">Retour à la liste</a>
+			<a href="{{ path('attribute_groups_index') }}" class="btn btn-primary" >Retour à la liste</a>
 
 			{{ include('attribute_groups/_delete_form.html.twig') }}
 
