--- a/templates/attribute_groups/index.html.twig
+++ b/templates/attribute_groups/index.html.twig
@@ -35,6 +35,8 @@
 			{% for message in app.flashes('success') %}
 				<div class="alert alert-success" role="alert">{{ message }}</div>
 			{% endfor %}
+
+			<a href="{{ path('attribute_groups_new') }}" class="btn btn-success my-5" >Créer nouveau groupe d'attributs</a>
 			
 			<table class="table">
 				<thead>
@@ -54,11 +56,11 @@
 							<td>{{ attribute_group.name }}</td>
 							<td>{{ attribute_group.attributes | length }}
 								{% if attribute_group.attributes | length > 0 %}
-									<a title="Voir les attributs appartenants à ce groupe" href="{{ path('attributes_index', {attributeGroupId:attribute_group.id}) }}">Voir</a>
+									<a title="Voir les attributs appartenants à ce groupe" href="{{ path('attributes_index', {attributeGroupId:attribute_group.id}) }}" class="btn btn-primary" >Voir</a>
 								{% endif %}
 							</td>
 							<td>
-								<a href="{{ path('attribute_groups_edit', {'id': attribute_group.id}) }}">Modifier</a>
+								<a href="{{ path('attribute_groups_edit', {'id': attribute_group.id}) }}" class="btn btn-warning" >Modifier</a>
 								{{ include('attribute_groups/_delete_form.html.twig') }}
 							</td>
 						</tr>
@@ -76,7 +78,7 @@
 				{{ knp_pagination_render(attribute_groups) }}
 			</div>
 
-			<a href="{{ path('attribute_groups_new') }}">Créer nouveau groupe d'attributs</a>
+			<a href="{{ path('attribute_groups_new') }}" class="btn btn-success my-5" >Créer nouveau groupe d'attributs</a>
 
 		</div>
 	</div>
