--- a/templates/attribute_groups/new.html.twig
+++ b/templates/attribute_groups/new.html.twig
@@ -34,7 +34,7 @@
 
 			{{ include('attribute_groups/_form.html.twig') }}
 
-			<a href="{{ path('attribute_groups_index') }}">Retour à la liste</a>
+			<a href="{{ path('attribute_groups_index') }}" class="btn btn-primary" >Retour à la liste</a>
 		</div>
 	</div>
 {% endblock %}
