--- a/templates/categories/edit.html.twig
+++ b/templates/categories/edit.html.twig
@@ -34,7 +34,7 @@
 
 			{{ include('categories/_form.html.twig', {'button_label': 'Modifier'}) }}
 
-			<a href="{{ path('categories_index') }}">Retour à la liste</a>
+			<a href="{{ path('categories_index') }}" class="btn btn-primary" >Retour à la liste</a>
 
 			{{ include('categories/_delete_form.html.twig') }}
 		</div>
