--- a/templates/categories/show.html.twig
+++ b/templates/categories/show.html.twig
@@ -81,7 +81,7 @@
 						<th>Produits associés à la catégorie</th>
 						<td>{{ category.products | length }}
 							{% if category.products | length > 0 %}
-								<a title="Voir les produits associés à cette catégorie" href="{{ path('products_index', {categoryId:category.id}) }}">Voir</a>
+								<a title="Voir les produits associés à cette catégorie" href="{{ path('products_index', {categoryId:category.id}) }}" class="btn btn-primary" >Voir</a>
 							{% endif %}
 						</td>
 					</tr>
@@ -96,9 +96,9 @@
 				</tbody>
 			</table>
 
-			<a href="{{ path('categories_index') }}">Retour à la liste</a>
+			<a href="{{ path('categories_index') }}" class="btn btn-primary" >Retour à la liste</a>
 
-			<a href="{{ path('categories_edit', {'id': category.id}) }}">Modifier</a>
+			<a href="{{ path('categories_edit', {'id': category.id}) }}" class="btn btn-warning" >Modifier</a>
 
 			{{ include('categories/_delete_form.html.twig') }}
 		</div>
