--- a/templates/comments/index.html.twig
+++ b/templates/comments/index.html.twig
@@ -40,6 +40,25 @@
 				<div class="alert alert-warning" role="alert">{{ message }}</div>
 			{% endfor %}
 
+			{# Barre de recherche #}
+			<div class="search_filter mb-5"> 
+				<form class="search_bar" action="{{ path('comments_index') }}" method="get">
+					<div class="row">
+						<input class="col-5 p-2" type="text" name="search" placeholder="Rechercher parmis les pseudos des auteurs et leurs contenus">
+						
+							<select name="isModaratedFilter" id="isModaratedFilter">
+								<option value="">Messages modérés</option>
+								<option value=1>Oui</option> 
+								<option value=0>Non</option> 
+							</select>
+						
+						<button type="submit" class="btn btn-primary" class=" button violetBackground">OK</button>		
+						<a class="btn btn-secondary mx-1" href="{{ path('comments_index') }}" title="Retour à la liste des produits">Reset</a>	
+					</div>
+				</form>
+			</div>
+			{# Fin barre de recherche #}
+
 			<table class="table">
 				<thead>
 					<tr>
@@ -72,8 +91,8 @@
 							</td>
 							<td>{{ comment.createdAt|date('d-m-Y H:i:s') }}</td>
 							<td>
-								<a href="{{ path('comments_show', {'id': comment.id}) }}">Voir</a>
-								<a href="{{ path('comments_edit', {'id': comment.id}) }}">Modérer</a>
+								<a href="{{ path('comments_show', {'id': comment.id}) }}" class="btn btn-primary" >Voir</a>
+								<a href="{{ path('comments_edit', {'id': comment.id}) }}" class="btn btn-warning">Modérer</a>
 								{{ include('comments/_delete_form.html.twig') }}
 							</td>
 						</tr>
