--- a/templates/comments/show.html.twig
+++ b/templates/comments/show.html.twig
@@ -62,9 +62,9 @@
 				</tbody>
 			</table>
 
-			<a href="{{ path('comments_index') }}">Retour à la liste</a>
+			<a href="{{ path('comments_index') }}" class="btn btn-primary" >Retour à la liste</a>
 
-			<a href="{{ path('comments_edit', {'id': comment.id}) }}">Modérer</a>
+			<a href="{{ path('comments_edit', {'id': comment.id}) }}" class="btn btn-warning">Modérer</a>
 
 			{{ include('comments/_delete_form.html.twig') }}
 		</div>
