--- a/templates/languages/edit.html.twig
+++ b/templates/languages/edit.html.twig
@@ -34,7 +34,7 @@
 
 			{{ include('languages/_form.html.twig', {'button_label': 'Modifier'}) }}
 
-			<a href="{{ path('languages_index') }}">Retour à la liste</a>
+			<a href="{{ path('languages_index') }}" class="btn btn-primary" >Retour à la liste</a>
 
 			{{ include('languages/_delete_form.html.twig') }}
 		</div>
