--- a/templates/messages/show.html.twig
+++ b/templates/messages/show.html.twig
@@ -78,7 +78,7 @@
 				</tbody>
 			</table>
 
-			<a href="{{ path('messages_index') }}">Retour à la liste</a>
+			<a href="{{ path('messages_index') }}" class="btn btn-primary" >Retour à la liste</a>
 
 			{{ include('messages/_delete_form.html.twig') }}
 		</div>
