--- a/templates/pages/new.html.twig
+++ b/templates/pages/new.html.twig
@@ -34,7 +34,7 @@
 
 			{{ include('pages/_form.html.twig') }}
 
-			<a href="{{ path('pages_index') }}">Retour à la liste des publications</a>
+			<a href="{{ path('pages_index') }}" class="btn btn-primary">Retour à la liste des publications</a>
 		</div>
 	</div>
 
