--- a/templates/products/new.html.twig
+++ b/templates/products/new.html.twig
@@ -34,7 +34,7 @@
 
 			{{ include('products/_form.html.twig') }}
 
-			<a href="{{ path('products_index') }}">Retour à la liste des ***REMOVED***</a>
+			<a href="{{ path('products_index') }}" class="btn btn-primary">Retour à la liste des ***REMOVED***</a>
 		</div>
 	</div>
 {% endblock %}
