--- a/templates/users/index.html.twig
+++ b/templates/users/index.html.twig
@@ -40,6 +40,8 @@
 				<div class="alert alert-warning" role="alert">{{ message }}</div>
 			{% endfor %}
 
+			<a href="{{ path('users_new') }}" class="btn btn-success my-5" >Créer nouvel utilisateur</a>
+
 			<table class="table">
 				<thead>
 					<tr>
@@ -70,11 +72,11 @@
 							<td>{{ user.roles ? user.roles|json_encode : '' }}</td>
 							<td>
 								{{ user.pages|length }}
-								<a title="Voir les {{ user.pages|length }} publications de {{ user.firstname }}" href="{{ path('pages_index', {userId: user.id }) }}">Voir</a>
+								<a title="Voir les {{ user.pages|length }} publications de {{ user.firstname }}" href="{{ path('pages_index', {userId: user.id }) }}" class="btn btn-primary" >Voir</a>
 							</td>
 							<td>
-								<a href="{{ path('users_show', {'id': user.id}) }}">Voir</a>
-								<a href="{{ path('users_edit', {'id': user.id}) }}">Modifier</a>
+								<a href="{{ path('users_show', {'id': user.id}) }}" class="btn btn-primary" >Voir</a>
+								<a href="{{ path('users_edit', {'id': user.id}) }}" class="btn btn-warning" >Modifier</a>
 								{{ include('users/_delete_form.html.twig') }}
 							</td>
 						</tr>
@@ -92,7 +94,7 @@
 				{{ knp_pagination_render(users) }}
 			</div>
 
-			<a href="{{ path('users_new') }}">Créer nouvel utilisateur</a>
+			<a href="{{ path('users_new') }}" class="btn btn-success my-5" >Créer nouvel utilisateur</a>
 		</div>
 	</div>
 {% endblock %}
