--- a/templates/users/new.html.twig
+++ b/templates/users/new.html.twig
@@ -34,7 +34,7 @@
 
 			{{ include('users/_form.html.twig') }}
 
-			<a href="{{ path('users_index') }}">Retour à la liste</a>
+			<a href="{{ path('users_index') }}" class="btn btn-primary" >Retour à la liste</a>
 		</div>
 	</div>
 {% endblock %}
